@@ -646,6 +646,9 @@ Release 0.6.0 -  Unreleased
     HIVE-1531. Make Hive build work with Ivy versions < 2.1.0
     (Carl Steinbach via jvs)
 
+    HIVE-1725. Include metastore upgrade scripts in release tarball
+    (Carl Steinbach via jvs)
+
   OPTIMIZATIONS
 
     HIVE-1348. Move inputFileChanged() from ExecMapper to where it is needed
